Fix z-index.

--- a/markup/components/footer/footer.less
+++ b/markup/components/footer/footer.less
@@ -24,11 +24,15 @@
         margin: 64px auto 51px;
         text-align: center;
         line-height: 59px;
+        position: relative;
+        z-index: 4;
     }
     &__text-wrap {
         display: flex;
         margin: 10px 0 64px;
         flex-direction: column;
+        position: relative;
+        z-index: 4;
     }
     &__text {
         font-size: 16px;
@@ -47,6 +51,8 @@
         font-family: "robotoblack", sans-serif;
         text-decoration: none;
         background: rgba(0, 0, 0, 0.38);
+        position: relative;
+        z-index: 4;
     }
     &__table {
         display: table;
